update docker image repo

--- a/simple_jwt_api.yml
+++ b/simple_jwt_api.yml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
         - name: simple-jwt-api
-          image: myimage
+          image: lnsc/project-flask
           securityContext:
             privileged: false
             readOnlyRootFilesystem: false
